accessibility: correct color contrast ratio

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -469,7 +469,7 @@ p {
   display: inline-block;
   font-size: 15px;
   font-weight: 600;
-  color: #7a7a7a;
+  color: #595959;
   letter-spacing: 0.5px;
   margin-bottom: 12.5px;
 }
